--- a/packages/core/system/public/views/header.html
+++ b/packages/core/system/public/views/header.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
             <div class="navbar-brand" href="#">
-                <a href="#" ui-sref="news">
+                <a href="#" ui-sref="news" ng-if="hdrctr.hdrvars.authenticated">
                     <img src="ddb/assets/img/logo.png" style="height: 30px"/>
                 </a>
             </div>
