--- a/packages/custom/ddb/public/views/group.html
+++ b/packages/custom/ddb/public/views/group.html
@@ -13,7 +13,7 @@
 
                 <div class="row">
                     <div class="col-md-3">
-                        <div class="panel panel-primary">
+                        <div class="panel panel-danger">
                             <div class="panel-heading">
                                 <h3 class="panel-title">Super Cup</h3>
                             </div>
@@ -31,7 +31,7 @@
                     </div>
 
                     <div class="col-md-9">
-                        <div class="panel panel-default">
+                        <div class="panel panel-danger">
                             <div class="panel-heading">
                                 <h3 class="panel-title">Group Trend</h3>
                             </div>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-success">
+                <div class="panel panel-danger">
                     <div class="panel-heading">
                         <h3 class="panel-title">Side Trophies</h3>
                     </div>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default">
+                <div class="panel panel-danger">
                     <div class="panel-heading">
                         <h3 class="panel-title">Day Trophies</h3>
                     </div>
@@ -153,7 +153,7 @@
             </div>
             <div class="col-md-3">
 
-                <div class="panel panel-success">
+                <div class="panel panel-warning">
                     <div class="panel-heading">
                         <h3 class="panel-title">Members</h3>
                     </div>
@@ -171,7 +171,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-info">
+                <div class="panel panel-warning">
                     <div class="panel-heading">
                         <h3 class="panel-title">Outstanding Invitations</h3>
                     </div>
@@ -185,7 +185,7 @@
                                     {{member.username}}
                                 </td>
                                 <td class="text-right">
-                                    <button class="btn btn-default btn-sm" ng-click="uninviteUser(member._id)">
+                                    <button class="btn btn-danger btn-sm" ng-click="uninviteUser(member._id)">
                                         <i class="glyphicon glyphicon-remove"/> Revoke
                                     </button>
                                 </td>
@@ -205,7 +205,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-danger">
+                <div class="panel panel-warning">
                     <div class="panel-heading">
                         <h3 class="panel-title">Leave Group</h3>
                     </div>
