--- a/packages/custom/ddb/public/views/managegroups.html
+++ b/packages/custom/ddb/public/views/managegroups.html
@@ -7,7 +7,7 @@
 
         <div class="row">
             <div class="col-md-8">
-                <div class="panel panel-default">
+                <div class="panel panel-danger">
                     <div class="panel-heading">
                         <h3 class="panel-title">Create a group</h3>
                     </div>
@@ -44,7 +44,7 @@
                                 <tr>
                                     <th></th>
                                     <td>
-                                        <button type="submit" class="btn btn-primary"><i
+                                        <button type="submit" class="btn btn-danger"><i
                                                 class="glyphicon glyphicon-ok"/>
                                             Create Group
                                         </button>
@@ -58,7 +58,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="panel panel-info">
+                <div class="panel panel-warning">
                     <div class="panel-heading">
                         <h3 class="panel-title">Join groups</h3>
                     </div>
