--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -9,12 +9,12 @@
 
         <div class="row">
             <div class="col-md-6">
-                <div class="panel panel-default">
+                <div class="panel panel-danger">
                     <div class="panel-heading">
                         <h3 class="panel-title">Key Performance Indicators</h3>
                     </div>
                     <div class="panel-body">
-                        <table class="table table-striped table-hover">
+                        <table class="table table-striped ">
                             <tbody>
                             <tr>
                                 <th>Percentage drinking days</th>
@@ -46,7 +46,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="panel panel-default">
+                <div class="panel panel-danger">
                     <div class="panel-heading">
                         <h3 class="panel-title">Averaged Drinking Trend</h3>
                     </div>
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel panel-default">
+                <div class="panel panel-danger">
                     <div class="panel-heading">
                         <h3 class="panel-title">Week Profile</h3>
                     </div>
@@ -91,7 +91,7 @@
                                 labels="weekLabels"></canvas>
                     </div>
                     <div class="panel-body">
-                        <table class="table table-striped table-hover">
+                        <table class="table table-striped ">
                             <thead>
                             <th></th>
                             <th>Total Alcohol</th>
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="panel panel-default">
+                <div class="panel panel-danger">
                     <div class="panel-heading">
                         <h3 class="panel-title">Preference Profile</h3>
                     </div>
@@ -149,7 +149,7 @@
                                 labels="typeLabels"></canvas>
                     </div>
                     <div class="panel-body">
-                        <table class="table table-striped table-hover">
+                        <table class="table table-striped ">
                             <thead>
                             <th></th>
                             <th>Total</th>
@@ -180,7 +180,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="panel panel-default">
+                <div class="panel panel-danger">
                     <div class="panel-heading">
                         <h3 class="panel-title">Cumulative Drinking Trend</h3>
                     </div>
