--- a/packages/custom/ddb/public/assets/css/variables.less
+++ b/packages/custom/ddb/public/assets/css/variables.less
@@ -7,23 +7,23 @@
 @gray-dark: lighten(@gray-base, 5%);
 @gray: lighten(@gray-base, 10%);
 @gray-light: lighten(@gray-base, 20%);
-@gray-lighter: lighten(@gray-base, 80.5%);
-@brand-primary: #FFCC33;
-@brand-success: #FFE082;
-@brand-info: #E7AF07;
-@brand-warning: #FF6700;
-@brand-danger: #9B3F00;
+@gray-lighter: #FFFAF6;
+@brand-primary: rgb(255, 103, 0);
+@brand-success: rgb(255, 103, 0);
+@brand-info: rgb(255, 103, 0);
+@brand-warning: rgb(255, 103, 0);
+@brand-danger: #000;
 
 //== Scaffolding
 
 //** Background color for `<body>`.
-@body-bg: #fff;
+@body-bg: rgb(255, 255, 255);
 
 //** Global text color on `<body>`.
 @text-color: @gray-dark;
 
 //** Global textual link color.
-@link-color: #9B3F00;
+@link-color: rgb(155, 63, 0);
 
 //** Link hover color set via `darken()` function.
 @link-hover-color: darken(@link-color, 15%);
@@ -56,7 +56,7 @@
 
 //** By default, this inherits from the `<body>`.
 @headings-font-family: inherit;
-@headings-font-weight: 500;
+@headings-font-weight: rgb(85, 0, 0);
 @headings-line-height: 1.1;
 @headings-color: inherit;
 
@@ -87,7 +87,7 @@
 @border-radius-small: 3px;
 
 //** Global color for active items (e.g., navs or dropdowns).
-@component-active-color: #000;
+@component-active-color: #fff;
 
 //** Global background color for active items (e.g., navs or dropdowns).
 @component-active-bg: @brand-primary;
@@ -107,33 +107,33 @@
 @table-condensed-cell-padding: 5px;
 
 //** Default background color used for all tables.
-@table-bg: transparent;
+@table-bg: rgba(0, 0, 0, 0);
 
 //** Background color used for `.table-striped`.
-@table-bg-accent: #FFF9E6;
+@table-bg-accent: #FFF0E6;
 
 //** Background color used for `.table-hover`.
-@table-bg-hover: #FFE69A;
+@table-bg-hover: @brand-warning;
 @table-bg-active: @table-bg-hover;
 
 //** Border color for table and cell borders.
-@table-border-color: #FFC39A;
+@table-border-color: #FFFAF6;
 
 //== Buttons
 @btn-font-weight: normal;
-@btn-default-color: #000;
-@btn-default-bg: #FFF4D3;
-@btn-default-border: #E7AF07;
-@btn-primary-color: #000;
-@btn-primary-bg: @brand-primary;
-@btn-primary-border: #B28600;
+@btn-default-color: rgb(0, 0, 0);
+@btn-default-bg: #fff;
+@btn-default-border: #000;
+@btn-primary-color: @brand-warning;
+@btn-primary-bg: #000;
+@btn-primary-border: @brand-warning;
 @btn-success-color: rgb(0, 0, 0);
 @btn-success-bg: @brand-success;
 @btn-success-border: rgb(231, 175, 7);
-@btn-info-color: rgb(0, 0, 0);
-@btn-info-bg: @brand-info;
-@btn-info-border: darken(@btn-info-bg, 5%);
-@btn-warning-color: #fff;
+@btn-info-color: rgb(255, 103, 0);
+@btn-info-bg: #fff;
+@btn-info-border: rgb(231, 175, 7);
+@btn-warning-color: rgb(255, 255, 255);
 @btn-warning-bg: @brand-warning;
 @btn-warning-border: darken(@btn-warning-bg, 5%);
 @btn-danger-color: #fff;
@@ -144,16 +144,16 @@
 //== Forms
 
 //** `<input>` background color
-@input-bg: #FFF0E6;
+@input-bg: #FFFAF6;
 
 //** `<input disabled>` background color
 @input-bg-disabled: @gray-lighter;
 
 //** Text color for `<input>`s
-@input-color: #9B3F00;
+@input-color: @brand-danger;
 
 //** `<input>` border color
-@input-border: #E7AF07;
+@input-border: @brand-danger;
 
 //** Default `.form-control` border radius
 @input-border-radius: @border-radius-base;
@@ -165,10 +165,10 @@
 @input-border-radius-small: @border-radius-small;
 
 //** Border color for inputs on focus
-@input-border-focus: #FF6700;
+@input-border-focus: @brand-warning;
 
 //** Placeholder text color
-@input-color-placeholder: #E7AF07;
+@input-color-placeholder: @brand-warning;
 
 //** Default `.form-control` height
 @input-height-base: (@line-height-computed + (@padding-base-vertical * 2) + 2);
@@ -181,8 +181,8 @@
 
 //** `.form-group` margin
 @form-group-margin-bottom: 15px;
-@legend-color: #9B3F00;
-@legend-border-color: #9B3F00;
+@legend-color: rgb(155, 63, 0);
+@legend-border-color: rgb(155, 63, 0);
 
 //** Background color for textual input addons
 @input-group-addon-bg: @gray-lighter;
@@ -196,16 +196,16 @@
 //== Dropdowns
 
 //** Background for the dropdown menu.
-@dropdown-bg: #fff;
+@dropdown-bg: rgb(255, 255, 255);
 
 //** Dropdown menu `border-color`.
-@dropdown-border: rgba(0,0,0,.15);
+@dropdown-border: rgba(0, 0, 0, 0.15);
 
 //** Dropdown menu `border-color` **for IE8**.
-@dropdown-fallback-border: #ccc;
+@dropdown-fallback-border: rgb(204, 204, 204);
 
 //** Divider color for between dropdown items.
-@dropdown-divider-bg: #e5e5e5;
+@dropdown-divider-bg: rgb(229, 229, 229);
 
 //** Dropdown link text color.
 @dropdown-link-color: @gray-dark;
@@ -214,7 +214,7 @@
 @dropdown-link-hover-color: darken(@gray-dark, 5%);
 
 //** Hover background for dropdown links.
-@dropdown-link-hover-bg: #f5f5f5;
+@dropdown-link-hover-bg: rgb(245, 245, 245);
 
 //** Active dropdown menu item text color.
 @dropdown-link-active-color: @component-active-color;
@@ -229,7 +229,7 @@
 @dropdown-header-color: @gray-light;
 
 //** Deprecated `@dropdown-caret-color` as of v3.1.0
-@dropdown-caret-color: #000;
+@dropdown-caret-color: rgb(0, 0, 0);
 
 //-- Z-index master list
 @zindex-navbar: 1000;
@@ -310,38 +310,38 @@
 @navbar-padding-horizontal: floor((@grid-gutter-width / 2));
 @navbar-padding-vertical: ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height: 340px;
-@navbar-default-color: #777;
-@navbar-default-bg: #f8f8f8;
+@navbar-default-color: rgb(119, 119, 119);
+@navbar-default-bg: rgb(248, 248, 248);
 @navbar-default-border: darken(@navbar-default-bg, 6.5%);
-@navbar-default-link-color: #777;
-@navbar-default-link-hover-color: #333;
-@navbar-default-link-hover-bg: transparent;
-@navbar-default-link-active-color: #555;
+@navbar-default-link-color: rgb(119, 119, 119);
+@navbar-default-link-hover-color: rgb(51, 51, 51);
+@navbar-default-link-hover-bg: rgba(0, 0, 0, 0);
+@navbar-default-link-active-color: rgb(85, 85, 85);
 @navbar-default-link-active-bg: darken(@navbar-default-bg, 6.5%);
-@navbar-default-link-disabled-color: #ccc;
-@navbar-default-link-disabled-bg: transparent;
+@navbar-default-link-disabled-color: rgb(204, 204, 204);
+@navbar-default-link-disabled-bg: rgba(0, 0, 0, 0);
 @navbar-default-brand-color: @navbar-default-link-color;
 @navbar-default-brand-hover-color: darken(@navbar-default-brand-color, 10%);
-@navbar-default-brand-hover-bg: transparent;
-@navbar-default-toggle-hover-bg: #ddd;
-@navbar-default-toggle-icon-bar-bg: #888;
-@navbar-default-toggle-border-color: #ddd;
+@navbar-default-brand-hover-bg: rgba(0, 0, 0, 0);
+@navbar-default-toggle-hover-bg: rgb(221, 221, 221);
+@navbar-default-toggle-icon-bar-bg: rgb(136, 136, 136);
+@navbar-default-toggle-border-color: rgb(221, 221, 221);
 @navbar-inverse-color: lighten(@gray-light, 15%);
-@navbar-inverse-bg: #222;
+@navbar-inverse-bg: rgb(34, 34, 34);
 @navbar-inverse-border: darken(@navbar-inverse-bg, 10%);
 @navbar-inverse-link-color: lighten(@gray-light, 15%);
-@navbar-inverse-link-hover-color: #fff;
-@navbar-inverse-link-hover-bg: transparent;
+@navbar-inverse-link-hover-color: rgb(255, 255, 255);
+@navbar-inverse-link-hover-bg: rgba(0, 0, 0, 0);
 @navbar-inverse-link-active-color: @navbar-inverse-link-hover-color;
 @navbar-inverse-link-active-bg: darken(@navbar-inverse-bg, 10%);
-@navbar-inverse-link-disabled-color: #444;
-@navbar-inverse-link-disabled-bg: transparent;
+@navbar-inverse-link-disabled-color: rgb(68, 68, 68);
+@navbar-inverse-link-disabled-bg: rgba(0, 0, 0, 0);
 @navbar-inverse-brand-color: @navbar-inverse-link-color;
-@navbar-inverse-brand-hover-color: #fff;
-@navbar-inverse-brand-hover-bg: transparent;
-@navbar-inverse-toggle-hover-bg: #333;
-@navbar-inverse-toggle-icon-bar-bg: #fff;
-@navbar-inverse-toggle-border-color: #333;
+@navbar-inverse-brand-hover-color: rgb(255, 255, 255);
+@navbar-inverse-brand-hover-bg: rgba(0, 0, 0, 0);
+@navbar-inverse-toggle-hover-bg: rgb(51, 51, 51);
+@navbar-inverse-toggle-icon-bar-bg: rgb(255, 255, 255);
+@navbar-inverse-toggle-border-color: rgb(51, 51, 51);
 
 //== Navs
 
@@ -352,12 +352,12 @@
 @nav-disabled-link-hover-color: @gray-light;
 
 //== Tabs
-@nav-tabs-border-color: #ddd;
+@nav-tabs-border-color: rgb(221, 221, 221);
 @nav-tabs-link-hover-border-color: @gray-lighter;
 @nav-tabs-active-link-hover-bg: @body-bg;
 @nav-tabs-active-link-hover-color: @gray;
-@nav-tabs-active-link-hover-border-color: #ddd;
-@nav-tabs-justified-link-border-color: #ddd;
+@nav-tabs-active-link-hover-border-color: rgb(221, 221, 221);
+@nav-tabs-justified-link-border-color: rgb(221, 221, 221);
 @nav-tabs-justified-active-link-border-color: @body-bg;
 
 //== Pills
@@ -367,17 +367,17 @@
 
 //== Pagination
 @pagination-color: @link-color;
-@pagination-bg: #fff;
-@pagination-border: #ddd;
+@pagination-bg: rgb(255, 255, 255);
+@pagination-border: rgb(221, 221, 221);
 @pagination-hover-color: @link-hover-color;
 @pagination-hover-bg: @gray-lighter;
-@pagination-hover-border: #ddd;
-@pagination-active-color: #fff;
+@pagination-hover-border: rgb(221, 221, 221);
+@pagination-active-color: rgb(255, 255, 255);
 @pagination-active-bg: @brand-primary;
 @pagination-active-border: @brand-primary;
 @pagination-disabled-color: @gray-light;
-@pagination-disabled-bg: #fff;
-@pagination-disabled-border: #ddd;
+@pagination-disabled-bg: rgb(255, 255, 255);
+@pagination-disabled-border: rgb(221, 221, 221);
 
 //== Pager
 @pager-bg: @pagination-bg;
@@ -391,22 +391,22 @@
 //== Jumbotron
 @jumbotron-padding: 30px;
 @jumbotron-color: inherit;
-@jumbotron-bg: #FFA364;
+@jumbotron-bg: #FFFAF6;
 @jumbotron-heading-color: inherit;
 @jumbotron-font-size: ceil((@font-size-base * 1.5));
 
 //== Form states and alerts
-@state-success-text: #000;
-@state-success-bg: #FFE082;
+@state-success-text: rgb(0, 0, 0);
+@state-success-bg: @brand-primary;
 @state-success-border: darken(spin(@state-success-bg, -10), 5%);
-@state-info-text: #000;
-@state-info-bg: #FFC39A;
-@state-info-border: darken(spin(@state-info-bg, -10), 7%);
-@state-warning-text: #000;
-@state-warning-bg: #FFA364;
+@state-info-text: @brand-info;
+@state-info-bg: @gray-lighter;
+@state-info-border: @brand-info;
+@state-warning-text: #fff;
+@state-warning-bg: @brand-warning;
 @state-warning-border: darken(spin(@state-warning-bg, -10), 5%);
-@state-danger-text: #fff;
-@state-danger-bg: #C65000;
+@state-danger-text: rgb(255, 255, 255);
+@state-danger-bg: #000;
 @state-danger-border: darken(spin(@state-danger-bg, -10), 5%);
 
 //== Tooltips
@@ -415,10 +415,10 @@
 @tooltip-max-width: 200px;
 
 //** Tooltip text color
-@tooltip-color: #fff;
+@tooltip-color: rgb(255, 255, 255);
 
 //** Tooltip background color
-@tooltip-bg: #000;
+@tooltip-bg: rgb(0, 0, 0);
 @tooltip-opacity: .9;
 
 //** Tooltip arrow width
@@ -430,16 +430,16 @@
 //== Popovers
 
 //** Popover body background color
-@popover-bg: #fff;
+@popover-bg: rgb(255, 255, 255);
 
 //** Popover maximum width
 @popover-max-width: 276px;
 
 //** Popover border color
-@popover-border-color: rgba(0,0,0,.2);
+@popover-border-color: rgba(0, 0, 0, 0.2);
 
 //** Popover fallback border color
-@popover-fallback-border-color: #ccc;
+@popover-fallback-border-color: rgb(204, 204, 204);
 
 //** Popover title background color
 @popover-title-bg: darken(@popover-bg, 3%);
@@ -462,7 +462,7 @@
 //== Labels
 
 //** Default label background color
-@label-default-bg: @gray-light;
+@label-default-bg: #000;
 
 //** Primary label background color
 @label-primary-bg: @brand-primary;
@@ -480,10 +480,10 @@
 @label-danger-bg: @brand-danger;
 
 //** Default label text color
-@label-color: #fff;
+@label-color: rgb(255, 255, 255);
 
 //** Default text color of a linked label
-@label-link-hover-color: #fff;
+@label-link-hover-color: rgb(255, 255, 255);
 
 //== Modals
 
@@ -497,22 +497,22 @@
 @modal-title-line-height: @line-height-base;
 
 //** Background color of modal content area
-@modal-content-bg: #fff;
+@modal-content-bg: rgb(255, 255, 255);
 
 //** Modal content border color
-@modal-content-border-color: rgba(0,0,0,.2);
+@modal-content-border-color: rgba(0, 0, 0, 0.2);
 
 //** Modal content border color **for IE8**
-@modal-content-fallback-border-color: #999;
+@modal-content-fallback-border-color: rgb(153, 153, 153);
 
 //** Modal backdrop background color
-@modal-backdrop-bg: #000;
+@modal-backdrop-bg: rgb(0, 0, 0);
 
 //** Modal backdrop opacity
 @modal-backdrop-opacity: .5;
 
 //** Modal header border color
-@modal-header-border-color: #e5e5e5;
+@modal-header-border-color: rgb(229, 229, 229);
 
 //** Modal footer border color
 @modal-footer-border-color: @modal-header-border-color;
@@ -540,10 +540,10 @@
 //== Progress bars
 
 //** Background color of the whole progress component
-@progress-bg: #f5f5f5;
+@progress-bg: rgb(245, 245, 245);
 
 //** Progress bar text color
-@progress-bar-color: #fff;
+@progress-bar-color: rgb(255, 255, 255);
 
 //** Variable for setting rounded corners on progress bar.
 @progress-border-radius: @border-radius-base;
@@ -566,16 +566,16 @@
 //== List group
 
 //** Background color on `.list-group-item`
-@list-group-bg: #fff;
+@list-group-bg: rgb(255, 255, 255);
 
 //** `.list-group-item` border color
-@list-group-border: #ddd;
+@list-group-border: rgb(221, 221, 221);
 
 //** List group border radius
 @list-group-border-radius: @border-radius-base;
 
 //** Background color of single list items on hover
-@list-group-hover-bg: #f5f5f5;
+@list-group-hover-bg: rgb(245, 245, 245);
 
 //** Text color of active list items
 @list-group-active-color: @component-active-color;
@@ -597,26 +597,26 @@
 
 //** Text color for content within disabled list items
 @list-group-disabled-text-color: @list-group-disabled-color;
-@list-group-link-color: #555;
+@list-group-link-color: rgb(85, 85, 85);
 @list-group-link-hover-color: @list-group-link-color;
-@list-group-link-heading-color: #333;
+@list-group-link-heading-color: rgb(51, 51, 51);
 
 //== Panels
-@panel-bg: #fff;
+@panel-bg: rgb(255, 255, 255);
 @panel-body-padding: 15px;
 @panel-heading-padding: 10px 15px;
 @panel-footer-padding: @panel-heading-padding;
 @panel-border-radius: @border-radius-base;
 
 //** Border color for elements within panels
-@panel-inner-border: #FFC39A;
-@panel-footer-bg: rgb(255, 218, 192);
+@panel-inner-border: rgb(0, 0, 0);
+@panel-footer-bg: FFFAF6;
 @panel-default-text: @gray-dark;
-@panel-default-border: #FFC39A;
-@panel-default-heading-bg: #FFDAC0;
-@panel-primary-text: #000;
-@panel-primary-border: @brand-primary;
-@panel-primary-heading-bg: @brand-primary;
+@panel-default-border: #000;
+@panel-default-heading-bg: FFFAF6;
+@panel-primary-text: @brand-warning;
+@panel-primary-border: @brand-warning;
+@panel-primary-heading-bg: #000;
 @panel-success-text: @state-success-text;
 @panel-success-border: @state-success-border;
 @panel-success-heading-bg: @state-success-bg;
@@ -639,7 +639,7 @@
 @thumbnail-bg: @body-bg;
 
 //** Thumbnail border color
-@thumbnail-border: #ddd;
+@thumbnail-border: rgb(221, 221, 221);
 
 //** Thumbnail border radius
 @thumbnail-border-radius: @border-radius-base;
@@ -651,21 +651,21 @@
 @thumbnail-caption-padding: 9px;
 
 //== Wells
-@well-bg: #FFDAC0;
-@well-border: darken(@well-bg, 7%);
+@well-bg: @gray-lighter;
+@well-border: @brand-warning;
 
 //== Badges
-@badge-color: #fff;
+@badge-color: rgb(255, 255, 255);
 
 //** Linked badge text color on hover
-@badge-link-hover-color: #fff;
+@badge-link-hover-color: rgb(255, 255, 255);
 @badge-bg: @gray-light;
 
 //** Badge text color in active nav link
 @badge-active-color: @link-color;
 
 //** Badge background color in active nav link
-@badge-active-bg: #fff;
+@badge-active-bg: rgb(255, 255, 255);
 @badge-font-weight: bold;
 @badge-line-height: 1;
 @badge-border-radius: 10px;
@@ -675,10 +675,10 @@
 @breadcrumb-padding-horizontal: 15px;
 
 //** Breadcrumb background color
-@breadcrumb-bg: #f5f5f5;
+@breadcrumb-bg: rgb(245, 245, 245);
 
 //** Breadcrumb text color
-@breadcrumb-color: #ccc;
+@breadcrumb-color: rgb(204, 204, 204);
 
 //** Text color of current page in the breadcrumb
 @breadcrumb-active-color: @gray-light;
@@ -687,28 +687,28 @@
 @breadcrumb-separator: "/";
 
 //== Carousel
-@carousel-text-shadow: 0 1px 2px rgba(0,0,0,.6);
-@carousel-control-color: #fff;
+@carousel-text-shadow: rgba(0, 0, 0, 0.6);
+@carousel-control-color: rgb(255, 255, 255);
 @carousel-control-width: 15%;
 @carousel-control-opacity: .5;
 @carousel-control-font-size: 20px;
-@carousel-indicator-active-bg: #fff;
-@carousel-indicator-border-color: #fff;
-@carousel-caption-color: #fff;
+@carousel-indicator-active-bg: rgb(255, 255, 255);
+@carousel-indicator-border-color: rgb(255, 255, 255);
+@carousel-caption-color: rgb(255, 255, 255);
 
 //== Close
 @close-font-weight: bold;
-@close-color: #000;
+@close-color: rgb(0, 0, 0);
 @close-text-shadow: 0 1px 0 #fff;
 
 //== Code
-@code-color: #c7254e;
-@code-bg: #f9f2f4;
-@kbd-color: #fff;
-@kbd-bg: #333;
-@pre-bg: #f5f5f5;
+@code-color: rgb(199, 37, 78);
+@code-bg: rgb(249, 242, 244);
+@kbd-color: rgb(255, 255, 255);
+@kbd-bg: rgb(51, 51, 51);
+@pre-bg: rgb(245, 245, 245);
 @pre-color: @gray-dark;
-@pre-border-color: #ccc;
+@pre-border-color: rgb(204, 204, 204);
 @pre-scrollable-max-height: 340px;
 
 //== Type
