--- a/packages/custom/ddb/public/views/news.html
+++ b/packages/custom/ddb/public/views/news.html
@@ -1,13 +1,13 @@
-<div data-ng-controller="DdbNewsController">
+<section class="container" style="min-height: 100vh">
+    <div data-ng-controller="DdbNewsController">
 
-    <section class="container">
+        <div class="page-header">
+            <h1>Welcome,
+                <small>{{user.user.username}}</small>
+            </h1>
+        </div>
 
-        <h1>Welcome,
-            <small>{{user.user.username}}</small>
-        </h1>
+        <!-- <div style="font-size: 10vw; color: #FFD8AA; margin-top: 20vh" class="text-center">Beerkeeper</div>-->
 
-    </section>
-
-   <!-- <div style="font-size: 10vw; color: #FFD8AA; margin-top: 20vh" class="text-center">Beerkeeper</div>-->
-
-</div>
+    </div>
+</section>
