--- a/packages/core/system/public/views/header.html
+++ b/packages/core/system/public/views/header.html
@@ -12,6 +12,7 @@
                 <a href="#" ui-sref="news" ng-if="hdrctr.hdrvars.authenticated">
                     <img src="ddb/assets/img/logo.png" style="height: 30px"/>
                 </a>
+                <img src="ddb/assets/img/logo.png" style="height: 30px" ng-if="!hdrctr.hdrvars.authenticated"/>
             </div>
         </div>
 
