--- a/packages/custom/ddb/public/views/group.html
+++ b/packages/custom/ddb/public/views/group.html
@@ -199,18 +199,18 @@
                             <select-users selection="usersToInvite" selection-limit="1">
                             </select-users>
                         </p>
-                        <button class="btn btn-primary" ng-click="inviteUsers()">
+                        <button class="btn btn-danger" ng-click="inviteUsers()">
                             <i class="glyphicon glyphicon-send"/> Send
                         </button>
                     </div>
                 </div>
 
-                <div class="panel panel-warning">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h3 class="panel-title">Leave Group</h3>
                     </div>
                     <div class="panel-body">
-                        <button class="btn btn-danger" ng-click="leaveGroup()">
+                        <button class="btn btn-primary" ng-click="leaveGroup()">
                             <i class="glyphicon glyphicon-remove-sign"/> Leave
                         </button>
                     </div>
