--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -3,7 +3,7 @@
 
         <div class="page-header">
             <h1>Drinking Data<br class="visible-xs"/>
-                <small>for {{user.user.username}}</small>
+                <small>{{user.user.username}}</small>
             </h1>
         </div>
 
@@ -25,7 +25,7 @@
                 <div class="row">
                     <div class="col-sm-3">
                         <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
-                            <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
+                            <button type="button" class="btn btn-danger dropdown-toggle btn-block btn-lg" dropdown-toggle
                                     ng-disabled="disabled">
                                 Add Pilsner <span class="caret"></span>
                             </button>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
-                            <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
+                            <button type="button" class="btn btn-danger dropdown-toggle btn-block btn-lg" dropdown-toggle
                                     ng-disabled="disabled">
                                 Add Strong Beer <span class="caret"></span>
                             </button>
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
-                            <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
+                            <button type="button" class="btn btn-danger dropdown-toggle btn-block btn-lg" dropdown-toggle
                                     ng-disabled="disabled">
                                 Add Wine <span class="caret"></span>
                             </button>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
-                            <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
+                            <button type="button" class="btn btn-danger dropdown-toggle btn-block btn-lg" dropdown-toggle
                                     ng-disabled="disabled">
                                 Add Liquor <span class="caret"></span>
                             </button>
