--- a/packages/custom/ddb/public/views/tools.html
+++ b/packages/custom/ddb/public/views/tools.html
@@ -6,7 +6,7 @@
             </h1>
         </div>
 
-        <div class="panel panel-default">
+        <div class="panel panel-danger">
             <div class="panel-heading">
                 <h3 class="panel-title">Data importeren uit Google Sheets Drankdatabank</h3>
             </div>
@@ -41,7 +41,7 @@
 
         <div class="row">
             <div class="col-md-6">
-                <div class="panel panel-warning">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h3 class="panel-title">Rebuild Database</h3>
                     </div>
@@ -49,13 +49,13 @@
                         <p>
                             Don't delete measurements, but rebuild all statistics
                         </p>
-                        <button class="btn btn-warning" ng-click="rebuild()"><i class="glyphicon glyphicon-ok"/> Rebuild
+                        <button class="btn btn-primary" ng-click="rebuild()"><i class="glyphicon glyphicon-ok"/> Rebuild
                         </button>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="panel panel-danger">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h3 class="panel-title">Delete all data</h3>
                     </div>
@@ -66,7 +66,7 @@
                             is no
                             way to undo it.
                         </p>
-                        <button class="btn btn-danger" ng-click="deleteAll()"><i class="glyphicon glyphicon-ok"/> Delete
+                        <button class="btn btn-primary" ng-click="deleteAll()"><i class="glyphicon glyphicon-ok"/> Delete
                             all
                             data
                         </button>
