--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -3,7 +3,7 @@
 
         <div class="page-header">
             <h1>Profile<br class="visible-xs"/>
-                <small>for {{user.username}}</small>
+                <small>{{user.username}}</small>
             </h1>
         </div>
 
